--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,1 @@
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\.php -f
-RewriteRule ^(.*)$ $1.php [NC,L]
+Options -Indexes
